tests/unit/language/errors/bounds_valid.arche
// RUN: %arche build -o %t %s && %t
Particle :: arche {
  id :: int,
}

static pool<Particle> (5);

main :: proc () {
  insert(Particle, 1);
  insert(Particle, 2);
  a := Particle.id[0];
  b := Particle.id[1];
  assert(a == 1, "a != 1\n");
  assert(b == 2, "b != 2\n");
}
